[gd_scene load_steps=16 format=3 uid="uid://cq8px4gyb1nlj"]

[ext_resource type="Script" uid="uid://bb1gmj075hjsj" path="res://scripts/Items/box.gd" id="1_anxlp"]
[ext_resource type="Texture2D" uid="uid://d07804ub6iy7s" path="res://Assets/Treasure Hunters/Merchant Ship/Sprites/Box/Destroyed/1.png" id="1_igdtg"]
[ext_resource type="Texture2D" uid="uid://lluowrq585b8" path="res://Assets/Treasure Hunters/Merchant Ship/Sprites/Box/Destroyed/2.png" id="2_anxlp"]
[ext_resource type="Texture2D" uid="uid://b3dei6a06ai58" path="res://Assets/Treasure Hunters/Merchant Ship/Sprites/Box/Destroyed/3.png" id="3_yches"]
[ext_resource type="Texture2D" uid="uid://dympek0iepik5" path="res://Assets/Treasure Hunters/Merchant Ship/Sprites/Box/Destroyed/4.png" id="4_h6rpn"]
[ext_resource type="Texture2D" uid="uid://co04yv2hkrn6i" path="res://Assets/Treasure Hunters/Merchant Ship/Sprites/Box/Destroyed/5.png" id="5_gu2bm"]
[ext_resource type="Texture2D" uid="uid://b15ehj0f0vxjw" path="res://Assets/Treasure Hunters/Merchant Ship/Sprites/Box/Hit/1.png" id="6_x8w8a"]
[ext_resource type="Texture2D" uid="uid://63mwfsqscish" path="res://Assets/Treasure Hunters/Merchant Ship/Sprites/Box/Hit/2.png" id="7_ym20b"]
[ext_resource type="Texture2D" uid="uid://b5ngrbcirgvbm" path="res://Assets/Treasure Hunters/Merchant Ship/Sprites/Box/Hit/3.png" id="8_oukka"]
[ext_resource type="Texture2D" uid="uid://cjf58dfxgnhjv" path="res://Assets/Treasure Hunters/Merchant Ship/Sprites/Box/Hit/4.png" id="9_lmnjw"]
[ext_resource type="Texture2D" uid="uid://dxxiysiwhpfs7" path="res://Assets/Treasure Hunters/Merchant Ship/Sprites/Box/Idle/1.png" id="10_gr135"]
[ext_resource type="AudioStream" uid="uid://265mxu4jl1c7" path="res://Assets/(Not A Placeholder) Free Sounds Pack/Free Sounds Pack/Wood 14-8.wav" id="12_yches"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c2ln5"]
size = Vector2(24.5, 16.5)

[sub_resource type="SpriteFrames" id="SpriteFrames_ks2v0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_igdtg")
}, {
"duration": 1.0,
"texture": ExtResource("2_anxlp")
}, {
"duration": 1.0,
"texture": ExtResource("3_yches")
}, {
"duration": 1.0,
"texture": ExtResource("4_h6rpn")
}, {
"duration": 1.0,
"texture": ExtResource("5_gu2bm")
}],
"loop": false,
"name": &"Destroyed",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_x8w8a")
}, {
"duration": 1.0,
"texture": ExtResource("7_ym20b")
}, {
"duration": 1.0,
"texture": ExtResource("8_oukka")
}, {
"duration": 1.0,
"texture": ExtResource("9_lmnjw")
}],
"loop": false,
"name": &"Hit",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_gr135")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_anxlp"]
size = Vector2(22.25, 15.25)

[node name="Box" type="Area2D"]
scale = Vector2(4, 4)
script = ExtResource("1_anxlp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.25, -0.25)
shape = SubResource("RectangleShape2D_c2ln5")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_ks2v0")
animation = &"Idle"

[node name="StaticBody2D" type="StaticBody2D" parent="AnimatedSprite2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite2D/StaticBody2D"]
position = Vector2(-0.375, -0.125)
shape = SubResource("RectangleShape2D_anxlp")

[node name="BoxHitSfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_yches")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animation_finished"]
